fine tuning of GUI Mutiplatfor package system repaired